--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,11 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "next.config.js",
-        "use": "@vercel/node"
-      }
-    ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/"
+        "dest": "/app",
+        "headers": {
+          "x-force-static": "1"
+        }
       }
     ]
   }
-  
